# redb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  REDB_DOC_PROJECT_PLAN.html  REDB_WEBSITE_PLAN.html  ROADMAP.md  SECURITY.md  index.html  manifest.json  redb.sln  robots.txt  sitemap.xml  toc.html  toc.json
api/: index.html  redb.CLI.Program.html  redb.CLI.html  redb.Core.Attributes.RedbAliasAttribute.html  redb.Core.Attributes.RedbIgnoreAttribute.html  redb.Core.Attributes.RedbSchemeAttribute.html  redb.Core.Attributes.html  redb.Core.Caching.CacheDiagnosticInfo.html  redb.Core.Caching.CacheExportData.html  redb.Core.Caching.CacheHealthStatus.html  redb.Core.Caching.CacheStatistics.html  redb.Core.Caching.CompleteSchemeMetadata.html  redb.Core.Caching.CompositeMetadataCacheStatistics.html  redb.Core.Caching.DetailedCacheStatistics.html  redb.Core.Caching.GlobalListCache.html  redb.Core.Caching.GlobalMetadataCache.html  redb.Core.Caching.GlobalPropsCache.html  redb.Core.Caching.ICompositeMetadataCache.html  redb.Core.Caching.IRedbObjectCache.html  redb.Core.Caching.ISchemeMetadataCache.html  redb.Core.Caching.IStaticMetadataCache.html  redb.Core.Caching.IStructureMetadataCache.html  redb.Core.Caching.ITypeMetadataCache.html  redb.Core.Caching.MemoryRedbObjectCache.html  redb.Core.Caching.MemoryUsageInfo.html  redb.Core.Caching.PerformanceInfo.html  redb.Core.Caching.PropsCacheStatistics.html  redb.Core.Caching.RedbTypeInfo.html  redb.Core.Caching.SchemeCacheStatistics.html  redb.Core.Caching.StaticCacheStatistics.html  redb.Core.Caching.StaticMetadataCache.html  redb.Core.Caching.StructureCacheStatistics.html  redb.Core.Caching.TopUsedScheme.html  redb.Core.Caching.TypeCacheStatistics.html  redb.Core.Caching.TypeUsageInfo.html  redb.Core.Caching.UserCacheStats.html  redb.Core.Caching.html  redb.Core.Configuration.ConfigurationExtensions.html  redb.Core.Configuration.ConfigurationScenario.html  redb.Core.Configuration.DefaultUserConfigurationInitializer.html  (+665 more)
redb.CLI/: Program.cs  README.md  redb.CLI.csproj
redb.Core/: IRedbService.cs  README.md  RedbServiceBase.cs  redb.Core.csproj
redb.Examples/: Program.cs  README.md  redb.Examples.csproj
redb.Export/: redb.Export.csproj
redb.MSSql/: README.md  RedbService.cs  redb.MSSql.csproj
redb.Postgres/: README.md  RedbService.cs  redb.Postgres.csproj
redb.PropsEditor/: README.md  (+2 more)
redb.SQLite/native/: .gitignore  CMakeLists.txt  README.md
redb.SQLite/native/src/: redb_ext.h  redb_extension.c  redb_pvt.c  redb_pvt.h  redb_pvt_analytics.c
(+736 files in other folders)
